--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <h1>Quiz App</h1>
     </header>
     <section class="card">
+      <img src="images/bookmark-solid.svg" class="bookmark-card" />
       <p>What property flips the axes in flexbox?</p>
-      <butoon>Show Answer</butoon>
+      <button>Show Answer</button>
       <code>#html</code>
       <code>#flexbox</code>
       <code>#css</code>
     </section>
-    section>
   </body>
 </html>
