--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <header>
       <h1>Quiz App</h1>
     </header>
-    <section class="card">
-      <img src="images/bookmark-solid.svg" class="bookmark-card" />
-      <p>What property flips the axes in flexbox?</p>
-      <button>Show Answer</button>
-      <code>#html</code>
-      <code>#flexbox</code>
-      <code>#css</code>
+    <section>
+      <article class="card">
+        <img src="images/bookmark-solid.svg" class="bookmark-card" />
+        <p>What property flips the axes in flexbox?</p>
+        <button>Show Answer</button>
+        <code>#html</code>
+        <code>#flexbox</code>
+        <code>#css</code>
+      </article>
     </section>
   </body>
 </html>
