--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <header>
       <h1>Quiz App</h1>
     </header>
-    <section>
-      <article class="card">
-        <img src="images/bookmark-solid.svg" class="bookmark-card" />
-        <p>What property flips the axes in flexbox?</p>
+    <main>
+      <section class="card">
+        <img
+          src="images/bookmark-solid.svg"
+          class="bookmark-card"
+          alt="bookmark"
+        />
+        <h2>What property flips the axes in flexbox?</h2>
         <button>Show Answer</button>
-        <code>#html</code>
-        <code>#flexbox</code>
-        <code>#css</code>
-      </article>
-    </section>
+        <div class="tags">
+          <a class="anchor-html">#html</a>
+          <a class="anchor-flexbox">#flexbox</a>
+          <a class="anchor-css">#css</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
