--- a/index.html
+++ b/index.html
@@ -18,7 +18,35 @@
           class="bookmark-card"
           alt="bookmark"
         />
-        <h2>What property flips the axes in flexbox?</h2>
+        <p>What property flips the axes in flexbox?</p>
+        <button>Show Answer</button>
+        <div class="tags">
+          <a class="anchor-html">#html</a>
+          <a class="anchor-flexbox">#flexbox</a>
+          <a class="anchor-css">#css</a>
+        </div>
+      </section>
+      <section class="card">
+        <img
+          src="images/bookmark-solid.svg"
+          class="bookmark-card"
+          alt="bookmark"
+        />
+        <p>What property flips the axes in flexbox?</p>
+        <button>Show Answer</button>
+        <div class="tags">
+          <a class="anchor-html">#html</a>
+          <a class="anchor-flexbox">#flexbox</a>
+          <a class="anchor-css">#css</a>
+        </div>
+      </section>
+      <section class="card">
+        <img
+          src="images/bookmark-solid.svg"
+          class="bookmark-card"
+          alt="bookmark"
+        />
+        <p>What property flips the axes in flexbox?</p>
         <button>Show Answer</button>
         <div class="tags">
           <a class="anchor-html">#html</a>
