update html and css of card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="card">
         <img
           src="images/bookmark-solid.svg"
-          class="bookmark-card"
+          class="card--bookmark"
           alt="bookmark"
         />
         <p>What property flips the axes in flexbox?</p>
@@ -29,7 +29,7 @@
       <section class="card">
         <img
           src="images/bookmark-solid.svg"
-          class="bookmark-card"
+          class="card--bookmark"
           alt="bookmark"
         />
         <p>What property flips the axes in flexbox?</p>
@@ -43,7 +43,7 @@
       <section class="card">
         <img
           src="images/bookmark-solid.svg"
-          class="bookmark-card"
+          class="card--bookmark"
           alt="bookmark"
         />
         <p>What property flips the axes in flexbox?</p>
