--- a/index.html
+++ b/index.html
@@ -14,35 +14,7 @@
     <main>
       <section class="card">
         <img
-          src="images/bookmark-solid.svg"
-          class="card--bookmark"
-          alt="bookmark"
-        />
-        <p>What property flips the axes in flexbox?</p>
-        <button>Show Answer</button>
-        <div class="tags">
-          <a class="anchor-html">#html</a>
-          <a class="anchor-flexbox">#flexbox</a>
-          <a class="anchor-css">#css</a>
-        </div>
-      </section>
-      <section class="card">
-        <img
-          src="images/bookmark-solid.svg"
-          class="card--bookmark"
-          alt="bookmark"
-        />
-        <p>What property flips the axes in flexbox?</p>
-        <button>Show Answer</button>
-        <div class="tags">
-          <a class="anchor-html">#html</a>
-          <a class="anchor-flexbox">#flexbox</a>
-          <a class="anchor-css">#css</a>
-        </div>
-      </section>
-      <section class="card">
-        <img
-          src="images/bookmark-solid.svg"
+          src="images/bookmark-solid-black.svg"
           class="card--bookmark"
           alt="bookmark"
         />
@@ -55,5 +27,26 @@
         </div>
       </section>
     </main>
+    <footer>
+      <nav>
+        <ul class="navigation">
+          <li>
+            <a href="" aria-label="home-page">
+                <img src="images/house-solid.svg" alt="home button" class="svg" />
+            </a>
+          </li>
+          <li>
+            <a href="" aria-label="bookmarks-page"></a>
+              <img src="images/bookmark-solid.svg" alt="bookmarks button" />
+            </a>
+          </li>
+          <li>
+            <a href="" aria-label="profile-page"></a>
+                <img src="images/user-solid.svg" alt="bookmarks button" />
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
