add comonents folder

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
       <nav>
         <ul class="navigation">
           <li>
-            <a href="" aria-label="home-page">
-                <img src="images/house-solid-white.svg" alt="home button" class="svg" />
+            <a href="./index.html" aria-label="home-page">
+                <img src="images/house-solid-white.svg" alt="home button" />
             </a>
           </li>
           <li>
-            <a href="" aria-label="bookmarks-page"></a>
+            <a href="./bookmarks.html" aria-label="bookmarks-page"></a>
               <img src="images/bookmark-outline-white.svg" alt="bookmarks button" />
             </a>
           </li>
           <li>
-            <a href="" aria-label="profile-page"></a>
-                <img src="images/user-outline-white.svg" alt="bookmarks button" />
+            <a href="./profile.html" aria-label="profile-page"></a>
+                <img src="images/user-outline-white.svg" alt="profile-page button" />
             </a>
           </li>
         </ul>
