--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -50,8 +50,8 @@
             </a>
           </li>
           <li>
-            <a href="./bookmarks.html" aria-label="bookmarks-page"></a>
-              <img src="images/bookmark-outline-white.svg" alt="bookmarks button" />
+            <a href="./bookmarks.html" aria-label="home-page">
+                <img src="images/bookmark-outline-white.svg" alt="home button" />
             </a>
           </li>
           <li>
