--- a/bookmarks.html
+++ b/bookmarks.html
@@ -15,15 +15,15 @@
       <section class="card">
         <img
           src="images/bookmark-solid-black.svg"
-          class="card--bookmark"
+          class="card__bookmark"
           alt="bookmark"
         />
-        <p>What property flips the axes in flexbox?</p>
-        <button>Show Answer</button>
-        <div class="tags">
-          <a class="anchor-html">#html</a>
-          <a class="anchor-flexbox">#flexbox</a>
-          <a class="anchor-css">#css</a>
+        <p class="card__p">What property flips the axes in flexbox?</p>
+        <button class="card__button">Show Answer</button>
+        <div class="card__tags">
+          <a class="card__tag__anchor-html">#html</a>
+          <a class="card__tag__anchor-flexbox">#flexbox</a>
+          <a class="card__tag__anchor-css">#css</a>
         </div>
       </section>
     </main>
