--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,17 +13,19 @@
     </header>
     <main>
       <section class="card">
-        <img
+        <button class="card__button__bookmark">
+          <img
           src="images/bookmark-solid-black.svg"
           class="card__bookmark"
           alt="bookmark"
         />
+        </button>
         <p class="card__p">What property flips the axes in flexbox?</p>
         <button class="card__button">Show Answer</button>
         <div class="card__tags">
-          <a class="card__tag__anchor-html">#html</a>
-          <a class="card__tag__anchor-flexbox">#flexbox</a>
-          <a class="card__tag__anchor-css">#css</a>
+          <a class="card__tag card__tag__anchor-html">#html</a>
+          <a class="card__tag card__tag__anchor-flexbox">#flexbox</a>
+          <a class="card__tag card__tag__anchor-css">#css</a>
         </div>
       </section>
     </main>
