--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section class="card">
-        <button class="card__button__bookmark">
+        <button class="card__button-bookmark">
           <img
           src="images/bookmark-solid-black.svg"
           class="card__bookmark"
@@ -30,7 +30,7 @@
         </div>
       </section>
       <section class="card">
-        <button class="card__button__bookmark">
+        <button class="card__button-bookmark">
           <img
           src="images/bookmark-outline-black.svg"
           class="card__bookmark"
