--- a/bookmarks.html
+++ b/bookmarks.html
@@ -14,7 +14,7 @@
     </header>
     <main>
       <section class="card">
-        <button class="card__button__bookmark">
+        <button class="card__button-bookmark">
           <img
           src="images/bookmark-solid-black.svg"
           class="card__bookmark"
