--- a/bookmarks.html
+++ b/bookmarks.html
@@ -21,8 +21,8 @@
           alt="bookmark"
         />
         </button>
-        <p class="card__p">What property flips the axes in flexbox?</p>
-        <button class="card__button">Show Answer</button>
+        <p class="card__question">What property flips the axes in flexbox?</p>
+        <button class="card__button-answer" data-js="button-answer">Show Answer</button>
         <div class="card__tags">
           <a class="card__tag card__tag__anchor-html">#html</a>
           <a class="card__tag card__tag__anchor-flexbox">#flexbox</a>
