--- a/bookmarks.html
+++ b/bookmarks.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Quiz App</h1>
     </header>
-    <main>
+    <main class="main">
       <section class="card">
         <button class="card__button-bookmark">
           <img
