--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Quiz App</h1>
     </header>
-    <main>
+    <main class="main">
       <section class="card">
         <button class="card__button-bookmark">
           <img
@@ -47,6 +47,7 @@
           <a class="card__tag card__tag__anchor-css">#css</a>
         </div>
       </section>
+      
     </main>
     <footer>
       <nav>
