--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </button>
         <p class="card__question">What property flips the axes in flexbox?</p>
         <button class="card__button-answer" data-js="button-answer">Show Answer</button>
-        <p class="card__answer card__answer--off" data-js="answer">flex-direction</p>
+        <p class="card__answer card__answer--off" data-js="answer">flex-direction Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quam nisi sequi aliquid vitae sit temporibus mollitia ipsum fugit eum illum sint quas iste tenetur, accusamus alias. Deleniti, natus sequi.</p>
         <div class="card__tags">
           <a class="card__tag card__tag__anchor-html">#html</a>
           <a class="card__tag card__tag__anchor-flexbox">#flexbox</a>
@@ -41,6 +41,7 @@
 
         <p class="card__question">Lorem ipsum?</p>
         <button class="card__button-answer" data-js="button-answer">Show Answer</button>
+        <p class="card__answer card__answer--off" data-js="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quam nisi sequi aliquid vitae sit temporibus mollitia ipsum fugit eum illum sint quas iste tenetur, accusamus alias. Deleniti, natus sequi.</p>
         <div class="card__tags">
           <a class="card__tag card__tag__anchor-html">#html</a>
           <a class="card__tag card__tag__anchor-flexbox">#flexbox</a>
