--- a/bookmarks.html
+++ b/bookmarks.html
@@ -86,13 +86,18 @@ THIRD CARD
             </a>
           </li>
           <li class="navigation__list-item">
-            <a href="./bookmarks.html" aria-label="bookmarks-page"></a>
-              <img src="images/bookmark-solid-white.svg" alt="bookmarks button" />
+            <a href="./bookmarks.html" aria-label="bookmarks-page">
+                <img src="images/bookmark-solid-white.svg" alt="bookmark icon" />
+            </a>
+          </li>
+          <li class="navigation__list-item">
+            <a href="./form.html" aria-label="create new cards button">
+                <img src="images/square-plus-regular.svg" alt="plus icon" />
             </a>
           </li>
           <li class="navigation__list-item">
             <a href="./profile.html" aria-label="profile-page"></a>
-                <img src="images/user-outline-white.svg" alt="profile-page button" />
+                <img src="images/user-regular.svg" alt="profile-page button" />
             </a>
           </li>
         </ul>
