--- a/form.html
+++ b/form.html
@@ -60,17 +60,22 @@
         <ul class="navigation__list">
           <li class="navigation__list-item">
             <a href="./index.html" aria-label="home-page">
-                <img src="images/house-solid-white.svg" alt="home button" />
+                <img src="images/house-outline-white.svg" alt="home button" />
             </a>
           </li>
           <li class="navigation__list-item">
-            <a href="./bookmarks.html" aria-label="home-page">
-                <img src="images/bookmark-outline-white.svg" alt="home button" />
+            <a href="./bookmarks.html" aria-label="bookmarks-page">
+                <img src="images/bookmark-regular.svg" alt="bookmark icon" />
+            </a>
+          </li>
+          <li class="navigation__list-item">
+            <a href="./form.html" aria-label="create new cards button">
+                <img src="images/square-plus-solid.svg" alt="plus icon" />
             </a>
           </li>
           <li class="navigation__list-item">
             <a href="./profile.html" aria-label="profile-page"></a>
-                <img src="images/user-outline-white.svg" alt="profile-page button" />
+                <img src="images/user-regular.svg" alt="profile-page button" />
             </a>
           </li>
         </ul>
