fix spaces-problem in input-fileds

--- a/form.html
+++ b/form.html
@@ -16,29 +16,22 @@
       <form aria-label="generate new questions" data-js="form">
         <br>
           <label for="question-input">Your question:</label>
-          <textarea
-            name="questionInput"
-            id="question-input"
-            rows="3"
-            aria-label="input field for new question"
-            data-js="questionInput"
-            maxlength="150"
-          >
+          <textarea name="questionInput"
+          id="question-input"
+          aria-label="input field for new question"
+          data-js="questionInput"
+          maxlength="150"></textarea>
+          
           </textarea>
           <small class="form__character-count"
             >(<span data-js="amountLeft"></span> characters left)</small
           ></br>
           <label for="answer-input">Your answer:</label>
-          <textarea
-            name="answerInput"
-            id="answer-input"
-            rows="3"
-            aria-label="input field for answer"
-            data-js="answerInput"
-            maxlength="150"
-          >
-          </textarea>
-          
+          <textarea name="answerInput"
+          id="answer-input"
+          aria-label="input field for answer"
+          data-js="answerInput"
+          maxlength="150"></textarea>
           <label for="tag-input">Tag:</label>
           <input
             type="text"
@@ -60,7 +53,7 @@
         <ul class="navigation__list">
           <li class="navigation__list-item">
             <a href="./index.html" aria-label="home-page">
-                <img src="images/house-outline-white.svg" alt="home button" />
+                <img src="images/house-regular.svg" alt="home button" />
             </a>
           </li>
           <li class="navigation__list-item">
