--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <ul class="navigation__list">
           <li class="navigation__list-item">
             <a href="./index.html" aria-label="home-page">
-                <img src="images/house-solid-white.svg" alt="home button" />
+                <img src="images/house-solid.svg" alt="home button" />
             </a>
           </li>
           <li class="navigation__list-item">
