--- a/bookmarks.html
+++ b/bookmarks.html
@@ -82,7 +82,7 @@ THIRD CARD
         <ul class="navigation__list">
           <li class="navigation__list-item">
             <a href="./index.html" aria-label="home-page">
-                <img src="images/house-outline-white.svg" alt="home button" />
+                <img src="images/house-regular.svg" alt="home button" />
             </a>
           </li>
           <li class="navigation__list-item">
